[tool.poetry]
name = "cloudcraftco"
version = "0.1.0"
description = "Python SDK for Cloudcraft API"
readme = "README.md"
license = { text = "LICENSE.md" }
authors = ["Datadog, Inc. <dev@datadoghq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pytest-mock = "^3.8.2"
pre-commit = "^2.20.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
