[tool.poetry]
name = "cloudcraftco"
version = "0.1.0"
description = "Python SDK for rendering AWS and Azure diagrams using the Cloudcraft API."
homepage = "https://www.cloudcraft.co/"
repository = "https://github.com/DataDog/cloudcraft_python"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Datadog, Inc. <dev@datadoghq.com>",
]
maintainers = [
    "Sean Broderick <sean.broderick@cloudcraft.co>",
]
keywords = [
    "datadog",
    "cloudcraft",
    "aws",
    "azure",
    "diagrams",
    "sdk",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pytest-mock = "^3.8.2"
pre-commit = "^2.20.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
