[tool.poetry]
name = "cloudcraftco"
version = "1.1.0"
description = "Python SDK for rendering AWS and Azure diagrams using the Cloudcraft API."
homepage = "https://www.cloudcraft.co/"
repository = "https://github.com/DataDog/cloudcraft-python"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Datadog, Inc. <dev@datadoghq.com>",
]
maintainers = [
    "Sean Broderick <sean.broderick@datadoghq.com>",
]
keywords = [
    "datadog",
    "cloudcraft",
    "aws",
    "azure",
    "diagrams",
    "sdk",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
black = "^24.0.0"
isort = "^5.13.0"
pytest-mock = "^3.14.0"
pre-commit = "^4.0.0"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
